install/kubernetes/elk/statefulset.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: es-master
  labels:
    app: elasticsearch
    role: master
spec:
  replicas: 3
  selector:
    matchLabels:
      app: elasticsearch
      role: master
  template:
    metadata:
      creationTimestamp:
      labels:
        app: elasticsearch
        role: master
    spec:
      volumes:
        - name: tz-config
          hostPath:
            path: "/usr/share/zoneinfo/Asia/Shanghai"
      containers:
        - name: es-master
          image: elasticsearch:6.8.0
          ports:
            - name: transport
              containerPort: 9300
              protocol: TCP
          resources:
            limits:
              cpu: '4'
              memory: 8Gi
            requests:
              cpu: 250m
              memory: 2Gi
          volumeMounts:
            - name: tz-config
              mountPath: "/etc/localtime"
            - name: data
              mountPath: "/usr/share/elasticsearch/data"
          livenessProbe:
            tcpSocket:
              port: transport
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          imagePullPolicy: IfNotPresent
  volumeClaimTemplates:
    - metadata:
        name: data
        creationTimestamp:
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        storageClassName: nfs-storage
        volumeMode: Filesystem
      status:
        phase: Pending
  serviceName: elasticsearch-master
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
